# google-bigtable-postgres-fdw

./: .gitignore  Cargo.toml  Dockerfile  LICENCE.md  Makefile  README.md  bigtable.control  build.rs  docker-compose.yml  gen.py
sql/: bigtable.sql
src/: bt_fdw.c  bt_fdw.h  error.rs  fdw.rs  ffi.rs  lib.rs  magic.c  pg.rs  pgheaders.h  structs.rs
utils/: get_version.sh
